<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

   <item
       android:id="@+id/downloadAction"
       android:icon="@android:drawable/stat_sys_download_done"
       android:title="@string/menu_download_tooltip"
       app:showAsAction="ifRoom" />
   <item
         android:id="@+id/refreshAction"
         android:icon="@drawable/ic_refresh"
         android:title="@string/menu_refresh_tooltip"
         app:showAsAction="ifRoom" />
   <item
         android:id="@+id/search"
         android:icon="@drawable/ic_search"
         android:title="@string/menu_search_tooltip"
         app:actionViewClass="androidx.appcompat.widget.SearchView"
         app:showAsAction="collapseActionView|ifRoom" />
   <item
         android:id="@+id/sortAction"
         android:icon="@drawable/ic_sort"
         android:title="@string/menu_sort_title"
         app:showAsAction="ifRoom" />
   <item
         android:id="@+id/searchFormFragment"
         android:title="@string/menu_search_title"
         app:showAsAction="never" />
   <item
         android:id="@+id/preferenceFragment"
         android:title="@string/menu_settings_title"
         app:showAsAction="never" />
</menu>
