<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="de.micmun.android.nextcloudcookbook.ui.recipedetail.RecipeDetailFragment">

   <data>

      <variable
            name="recipe"
            type="de.micmun.android.nextcloudcookbook.data.model.Recipe" />
   </data>

   <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">

      <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

         <TextView
               android:id="@+id/headerText"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_marginStart="16dp"
               android:layout_marginTop="16dp"
               android:layout_marginEnd="16dp"
               android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
               android:textSize="@dimen/tab_info_text_size"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintHorizontal_bias="0.0"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toTopOf="parent"
               app:recipeDescription="@{recipe}"
               app:recipeHeaderImage="@{recipe}" />

         <LinearLayout
               android:id="@+id/timeInfosTitleLayout"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_marginStart="16dp"
               android:layout_marginTop="8dp"
               android:layout_marginEnd="16dp"
               android:gravity="center"
               android:orientation="horizontal"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toBottomOf="@id/headerText">

            <TextView
                  android:id="@+id/prepTimeTitle"
                  android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_marginStart="1dp"
                  android:layout_marginEnd="8dp"
                  android:layout_weight="1"
                  android:text="@string/tooltip_prep_time"
                  android:textAlignment="center"
                  android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                  android:textSize="@dimen/tab_info_text_size"
                  android:textStyle="bold" />

            <TextView
                  android:id="@+id/cookTimeTitle"
                  android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_marginStart="1dp"
                  android:layout_marginEnd="8dp"
                  android:layout_weight="1"
                  android:text="@string/tooltip_cook_time"
                  android:textAlignment="center"
                  android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                  android:textSize="@dimen/tab_info_text_size"
                  android:textStyle="bold" />

            <TextView
                  android:id="@+id/totalTimeTitle"
                  android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_marginEnd="1dp"
                  android:layout_weight="1"
                  android:text="@string/tooltip_total_time"
                  android:textAlignment="center"
                  android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                  android:textSize="@dimen/tab_info_text_size"
                  android:textStyle="bold" />
         </LinearLayout>

         <LinearLayout
               android:id="@+id/timeInfosLayout"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_marginStart="16dp"
               android:layout_marginTop="8dp"
               android:layout_marginEnd="16dp"
               android:gravity="center"
               android:orientation="horizontal"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toBottomOf="@id/timeInfosTitleLayout">

            <TextView
                  android:id="@+id/prepTimeTxt"
                  android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_marginStart="1dp"
                  android:layout_marginEnd="8dp"
                  android:layout_weight="1"
                  android:textAlignment="center"
                  android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                  android:textSize="@dimen/tab_info_text_size"
                  app:recipePrepTime="@{recipe}" />

            <TextView
                  android:id="@+id/cookTimeTxt"
                  android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_marginStart="1dp"
                  android:layout_marginEnd="8dp"
                  android:layout_weight="1"
                  android:textAlignment="center"
                  android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                  android:textSize="@dimen/tab_info_text_size"
                  app:recipeCookTime="@{recipe}" />

            <TextView
                  android:id="@+id/totalTimeTxt"
                  android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_marginEnd="1dp"
                  android:layout_weight="1"
                  android:textAlignment="center"
                  android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                  android:textSize="@dimen/tab_info_text_size"
                  app:recipeTotalTime="@{recipe}" />
         </LinearLayout>

         <TextView
               android:id="@+id/yieldTxt"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_marginStart="16dp"
               android:layout_marginTop="8dp"
               android:layout_marginEnd="16dp"
               android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
               android:textSize="@dimen/tab_info_text_size"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toBottomOf="@+id/timeInfosLayout"
               app:recipeYield="@{recipe}" />

         <TextView
               android:id="@+id/authorTxt"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_marginStart="16dp"
               android:layout_marginTop="8dp"
               android:layout_marginEnd="16dp"
               android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
               android:textSize="@dimen/tab_info_text_size"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toBottomOf="@+id/yieldTxt"
               app:recipeAuthor="@{recipe}" />

         <TextView
               android:id="@+id/urlTxt"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_marginStart="16dp"
               android:layout_marginTop="8dp"
               android:layout_marginEnd="16dp"
               android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
               android:textSize="@dimen/tab_info_text_size"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toBottomOf="@+id/authorTxt"
               android:autoLink="web"
               app:url="@{recipe}" />

         <TextView
               android:id="@+id/categoriesTxt"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_marginStart="16dp"
               android:layout_marginTop="8dp"
               android:layout_marginEnd="16dp"
               android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
               android:textSize="@dimen/tab_info_text_size"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toBottomOf="@+id/urlTxt"
               app:recipeCategories="@{recipe}" />

         <TextView
               android:id="@+id/keywordsTxt"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_marginStart="16dp"
               android:layout_marginTop="8dp"
               android:layout_marginEnd="16dp"
               android:layout_marginBottom="8dp"
               android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
               android:textSize="@dimen/tab_info_text_size"
               app:keywords="@{recipe}"
               app:layout_constraintBottom_toBottomOf="parent"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toBottomOf="@+id/categoriesTxt" />

      </androidx.constraintlayout.widget.ConstraintLayout>
   </ScrollView>
</layout>
